<resources>
    <string name="app_name">test_kahago</string>
    <string name="login_text">Login</string>
    <string name="silahkan_masukan_data_anda">Silahkan masukan data anda</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="belum_punya_akun_kahago">Belum punya akun Kahago ?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="daftar_text">Daftar</string>
    <string name="silahkan_lengkapi_data_berikut_ini">Silahkan lengkapi data berikut ini</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email_text">Email</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="ada_reference">Ada Reference ?</string>
    <string name="setuju_dengan_term_kondisi_kahago"><![CDATA[Setuju dengan Term & Kondisi KAHAGO]]></string>
</resources>
