<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_form_top"
        android:layout_marginStart="@dimen/margin_form_side"
        android:layout_marginEnd="@dimen/margin_form_side">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_text"
            android:textSize="@dimen/title_text"
            android:textColor="@color/black_text"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:text="@string/silahkan_lengkapi_data_berikut_ini"
            android:textSize="@dimen/text_16"
            android:textColor="@color/light_gray_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:textSize="@dimen/text_16"
            android:textColor="@color/black_text"
            android:hint="@string/nama_lengkap"
            android:textColorHint="@color/gray_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:textSize="@dimen/text_16"
            android:textColor="@color/black_text"
            android:hint="@string/email_text"
            android:textColorHint="@color/gray_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:textSize="@dimen/text_16"
            android:textColor="@color/black_text"
            android:hint="@string/nomor_telepon"
            android:textColorHint="@color/gray_text" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/ada_reference"
            android:textSize="@dimen/text_16"
            android:textColor="@color/light2_gray"
            android:buttonTint="@color/colorPrimaryDark"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/setuju_dengan_term_kondisi_kahago"
            android:textSize="@dimen/text_14"
            android:textColor="@color/light2_gray"
            android:buttonTint="@color/colorPrimaryDark"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_48"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_20"
            android:text="@string/daftar_text"
            android:textSize="@dimen/text_16"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>

</RelativeLayout>